# project

./: .dockerignore  .gitattributes  .gitignore  README.md  joblib.py  lightgbm.py  pyproject.toml  xgboost.py
dataset/: node_1.csv  node_10.csv  node_11.csv  node_12.csv  node_2.csv  node_3.csv  node_4.csv  node_5.csv  node_9.csv
deployment/compose/: README.md  docker-compose.services.yml
deployment/docker/: README.md
deployment/registry/: README.md
fastapi/: __init__.py  app.py  testclient.py
models/trained/: README.md  cod_anomaly_service.metadata.json  cod_forecast_service.metadata.json  do_anomaly_service.metadata.json  flow_anomaly_service.metadata.json  flow_forecast_service.metadata.json  illegal_discharge_score_service.metadata.json  mixed_sewage_rain_score_service.metadata.json  nh3n_anomaly_service.metadata.json  nh3n_forecast_service.metadata.json  tss_turbidity_anomaly_service.metadata.json  tss_turbidity_forecast_service.metadata.json  water_quality_anomaly_service.metadata.json
pydantic/: __init__.py
scripts/: run_all_services_demo.py  run_phase1_demo.py  setup_keep_current_merge.sh  test_flow_services.py  test_flow_services.sh  train_all_services.py  train_phase1_models.py
services/cod_anomaly_service/: Dockerfile  README.md  app.py  inference.py  logic.py  server.py
shared/: http_runtime.py  service_base.py
shared/config/: settings.py  (+3 more)
sklearn/: ensemble.py
tests/: test_all_services_pipeline.py  test_containerization_assets.py  test_flow_service_syntax.py  test_joblib_compat.py  test_phase1_pipeline.py  test_repository_merge_policy.py
(+122 files in other folders)
