[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-edge-offload"
version = "0.1.0"
description = "Dataset-driven decentralized edge offloading prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "lightgbm>=4.5,<5.0",
  "xgboost>=2.1,<3.0",
  "joblib>=1.4,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
